# palindrome-finder

./: .gitignore  README.org  test_correctness.sh
go-palindrome/: build-pgo.sh  build.sh  go.mod  palindrome.go  palindrome_test.go  run-tests.sh
go-palindrome/cmd/palprod-go-largest/: main.go
go-palindrome/cmd/palprod-go-smallest/: main.go
haskell-palindrome/: README.md  build.sh  haskell-palindrome.cabal  run-tests.sh  test.hs  tests.hs
haskell-palindrome/app/: Largest.hs  Smallest.hs
haskell-palindrome/src/: Palindrome.hs
lisp/: args.lisp  build-comm-largest-inner.lisp  build-comm-smallest-inner.lisp  build-fast-largest-inner.lisp  build-fast-smallest-inner.lisp  coalton-palindrome-test.lisp  comm.lisp  fast.lisp  gc.lisp  pp-comm.asd  pp-fast.asd  profile-fast.lisp  runner-comm-largest-inner.lisp  runner-comm-smallest-inner.lisp  runner-fast-largest-inner.lisp  runner-fast-smallest-inner.lisp  utility.lisp
lisp/coalton-palindrome/: build-coalton-largest.lisp  build-coalton-smallest.lisp  build.sh  coalton-palindrome-test.lisp  coalton-palindrome.asd  disassemble.sh  run-tests.sh
lisp/coalton-palindrome/src/: package.lisp  palindrome.lisp  runner-largest.lisp  runner-smallest.lisp
lisp/common-lisp/: args.lisp  build-fast-largest-inner.lisp  build-fast-smallest-inner.lisp  build.sh  disassemble.sh  fast.lisp  math.lisp  package.lisp  palindrome-products-test.lisp  pp-fast.asd  run-tests.sh  runner-fast-largest-inner.lisp  runner-fast-smallest-inner.lisp
palindrome-benchmark/: Cargo.toml
palindrome-benchmark/benches/: pal_bench.rs
python-palindrome/: README.md  build.sh  palindrome.py  test.py
rust-palindrome/: Cargo.toml  build-functional.sh  build-simd.sh  build.sh  pgo_bolt_run.sh  pgo_bolt_run_functional.sh  pgo_bolt_run_simd.sh
rust-palindrome/benches/: has_even_digits.rs
rust-palindrome/src/: collections.rs  functional.rs  lib.rs  memoized.rs  simd.rs
typescript-palindrome/: build.sh  palindrome-bun.ts  palindrome-core.ts  palindrome-deno.ts  palindrome.ts  run-tests.sh  test.ts
