[package]
name = "rust-palindrome"
version = "0.1.0"
edition = "2024"

[lib]
name = "palprod_rust"
path = "src/lib.rs"

[[bin]]
name = "palprod-rust-largest"
path = "src/bin/palprod-rust-largest.rs"

[[bin]]
name = "palprod-rust-smallest"
path = "src/bin/palprod-rust-smallest.rs"

[profile.release]
lto = "fat"  # Use fat LTO for better cross-module optimization
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
debug = false
# BOLT requires symbols; do not strip in release
strip = false

[dependencies]
arrayvec = "0.7.6"
