[package]
name = "rust-palindrome"
version = "0.1.0"
edition = "2024"

[lib]
name = "palprod_rust"
path = "src/lib.rs"

[[bin]]
name = "palprod-rust-largest"
path = "src/bin/palprod-rust-largest.rs"

[[bin]]
name = "palprod-rust-smallest"
path = "src/bin/palprod-rust-smallest.rs"

[[bin]]
name = "palprod-rust-functional-largest"
path = "src/bin/palprod-rust-functional-largest.rs"

[[bin]]
name = "palprod-rust-functional-smallest"
path = "src/bin/palprod-rust-functional-smallest.rs"

[[bin]]
name = "palprod-rust-simd-largest"
path = "src/bin/palprod-rust-simd-largest.rs"

[[bin]]
name = "palprod-rust-simd-smallest"
path = "src/bin/palprod-rust-simd-smallest.rs"

[profile.release]
lto = "fat"  # Use fat LTO for better cross-module optimization
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
debug = false
# BOLT requires symbols; do not strip in release
strip = false

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "has_even_digits"
harness = false
